2014-12-10  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* AnimationEditor.h:
	* AnimationEditor.cpp:
	* TextureCoordinateEditor.xml:
	* X3DAnimationEditorInterface.h:
	* X3DAnimationEditorInterface.cpp: 

2014-12-09  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointEditor.h:
	* ViewpointEditor.cpp: 

2014-12-08  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditorPreview.x3dv:
	* TextureCoordinateEditorLeftPreview.x3dv:
	* TextureCoordinateEditorRightPreview.x3dv: 

2014-12-08  Holger Seelig  <holger.seelig@yahoo.de>

	* RotationTool.x3dv: 

2014-12-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Group.svg:
	* Ungroup.svg: 

2014-12-08  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointEditor.xml: 

2014-12-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Recent.svg:
	* BrowserWindow.xml:
	* Connected.svg:
	* Environment.svg:
	* GridEditor.xml:
	* Disconnected.svg:
	* TextureEditor.xml:
	* ViewpointEditor.xml:
	* X3DGridEditor.cpp:
	* X3DAngleEditor.cpp:
	* ViewpointEditor.cpp:
	* X3DViewpointEditorInterface.h:
	* PrecisionPlacementPanel.xml:
	* X3DViewpointEditorInterface.cpp:
	* X3DTextureTransformEditor.cpp:
	* X3DLayoutEditor.cpp:
	* X3DTransformEditor.cpp:
	* X3DGeoTransformEditor.cpp:
	* PrecisionPlacementPanel.cpp: 

2014-12-07  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.cpp: 

2014-12-07  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.cpp: 

2014-12-07  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditorPreview.x3dv:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditorRightPreview.x3dv:
	* TextureCoordinateEditor.cpp: 

2014-12-06  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.h:
	* AnimationEditor.cpp: 

2014-12-06  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.cpp: 

2014-12-06  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.cpp: 

2014-12-06  Holger Seelig  <holger.seelig@yahoo.de>
